--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>WebStudio</title>
 </head>
 <body>
-  <h1>Lorem ipsum dolor sit amet</h1>  
+
+<header>
+  <a href="./" class="logo">webstudio</a>
+  <nav>
+    <ul>
+      <li><a href="#">Studio</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Contacts</a></li>
+    </ul>
+  </nav>
+  <ul>
+    <li><a href="mailto:info@webstudio.com">info@webstudio.com</a></li>
+    <li><a href="tel:+10001111111">+1 (000) 111-11-11</a></li>
+  </ul>
+</header>
+
+<main>
+
+  <section>
+    <h1>Effective Solutions for Your Business</h1>
+    <button type="button">Order Service</button>
+  </section>
+
+ 
+  <section>
+    <h2>Our Features</h2>
+    <ul>
+      <li>
+        <h3>Strategy</h3>
+        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+      </li>
+      <li>
+        <h3>Punctuality</h3>
+        <p>Bring the key message to the brand’s audience for the best price within the shortest possible time.</p>
+      </li>
+      <li>
+        <h3>Diligence</h3>
+        <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+      </li>
+      <li>
+        <h3>Technologies</h3>
+        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+      </li>
+    </ul>
+  </section>
+
+  
+  <section>
+    <h2>Our Team</h2>
+    <ul>
+      <li>
+        <img src="./photos/man1.png" alt="Mark Guerrero" width="150">
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+      </li>
+      <li>
+        <img src="./photos/man2.png" alt="Tom Ford" width="150">
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+      </li>
+      <li>
+        <img src="./photos/woman.png" alt="Camila Garcia" width="150">
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+      </li>
+      <li>
+        <img src="./photos/man3.png" alt="Daniel Wilson" width="150">
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
+      </li>
+    </ul>
+  </section>
+</main>
+
+<footer>
+  <a href="./" class="logo">webstudio</a>
+  <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</footer>
+
 </body>
 </html>
