--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
     <h2>Our Team</h2>
     <ul>
       <li>
-        <img src="./images/man1.png" alt="Mark Guerrero" width="150">
+        <img src="./images/man1.jpg" alt="Mark Guerrero" width="150">
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
       </li>
       <li>
-        <img src="./images/man2.png" alt="Tom Ford" width="150">
+        <img src="./images/man2.jpg" alt="Tom Ford" width="150">
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
       </li>
       <li>
-        <img src="./images/woman.png" alt="Camila Garcia" width="150">
+        <img src="./images/woman.jpg" alt="Camila Garcia" width="150">
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
       </li>
       <li>
-        <img src="./images/man3.png" alt="Daniel Wilson" width="150">
+        <img src="./images/man3.jpg" alt="Daniel Wilson" width="150">
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
       </li>
